--- a/style.css
+++ b/style.css
@@ -22,8 +22,14 @@ header{
     background-color: rgb(200,220,225);
     padding: 1rem;
     border-radius: 5px;
+    text-align: center;
 }
 
 .scoreDiv{
+    text-align: center;
+}
+
+#gameDisplay{
+    font-size: 1.2rem;
     text-align: center;
 }
